# ukftbio

./: .gitignore  README.md  SIMULATION_FRAMEWORK_PLAN.md  agent_baton.md  bootstrap_baton.md  environment.yaml  grok_x_bytedance_mol-syn.md  grok_x_celltype_noobio_2_chat.md  pyproject.toml  requirements.txt
data/: README.md
docs/: PHASES_10_13_REPORT.md
experiments/: 01_minimal_entropic_replicator.md  01_minimal_entropic_replicator.py  02_levinthal_folding_paradox.md  02_levinthal_folding_paradox.py  03_error_threshold_sweep.md  03_error_threshold_sweep.py  04_autocatalytic_emergence.md  04_autocatalytic_emergence.py  05_fungal_choice_spike.md  05_fungal_choice_spike.py  06_mycelium_graph.md  06_mycelium_graph.py  07_choice_branching.md  07_choice_branching.py  08_biophoton_coherence.md  08_biophoton_coherence.py  09_fractal_timecrystal.md  09_fractal_timecrystal.py  10_full_pipeline.md  10_full_pipeline.py  11_real_fungal_ingest.md  11_real_fungal_ingest.py  12_jepa_real_data.md  12_jepa_real_data.py  13_varietal_comparison.md  13_varietal_comparison.py  14_local_global_tiers.md  14_local_global_tiers.py  15_semantic_jepa_tiers.md  15_semantic_jepa_tiers.py  16_cross_species_jepa_transfer.md  16_cross_species_jepa_transfer.py  17_cross_species_anomaly_scan.md  17_cross_species_anomaly_scan.py  18_duroxide_orchestration.md  18_duroxide_orchestration.py  19_cv_stratified_jepa_transfer.md  19_cv_stratified_jepa_transfer.py  20_temporal_grammar_fingerprint.md  20_temporal_grammar_fingerprint.py  (+7 more)
feedback/: README.md
papers/: 01_Biological_Choice_Fields_UKFT_v1.0.md  (+2 more)
(+34 files in other folders)
